apps/base/spoolman/spoolman-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spoolman
  labels:
    app: spoolman
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spoolman
  template:
    metadata:
      labels:
        app: spoolman
        app.kubernetes.io/name: spoolman
    spec:
      containers:
        - name: spoolman
          image: ghcr.io/donkie/spoolman@sha256:91e4b75dacfd17c64fdf23336e824149fb0d636df6c422312de1e211d02ce412
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: spoolman-data
              mountPath: /data
      volumes:
        - name: spoolman-data
          persistentVolumeClaim:
            claimName: spoolman-pvc
