apps/base/spoolman/spoolman-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spoolman
  namespace: spoolman
spec:
  type: ClusterIP
  selector:
    app: spoolman
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
