apps/base/spoolman/spoolman-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: spoolman-ingressroute
  namespace: spoolman
  annotations:
    gethomepage.dev/href: "https://${SUBDOMAIN:=placeholder}.hephaestus.markmk.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Spoolman"
    gethomepage.dev/description: "Application for managing filament spools."
    gethomepage.dev/app: spoolman
    gethomepage.dev/group: "Tools"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons/svg/spoolman.svg"
    gethomepage.dev/widget.type: "spoolman"
    gethomepage.dev/widget.url: "http://spoolman.spoolman.svc.cluster.local:8000"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`${SUBDOMAIN:=placeholder}.hephaestus.markmk.com`)
      kind: Rule
      services:
        - name: spoolman
          port: 8000
